fixed nav menu and overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,5 +5,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;300;400&family=Libre+Baskerville&display=swap');
 
 html * {
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif 
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  max-width: 100vw;
 }
